# void

./: .gitignore  Install.md  README.md  Uninstall.md  Update.md
docs/: README.md  getting-started.md  language-functions.md  vpm.md
install/: linux.sh
language/: Cargo.toml  README.md  void
language/examples/: game_loop.void  hello.void  hyperdrive.void  main.void  math.void  nodeish.void  void_native.void
language/examples/app/: void.json
language/examples/app/src/: main.void
language/src/: ast.rs  diagnostics.rs  lexer.rs  main.rs  parser.rs  runtime.rs  value.rs
language/void_modules/discord_builders/: NPM_IMPORT.txt  index.void  package.json  void.json  voidpkg.toml
language/void_modules/discord_js/: NPM_IMPORT.txt  index.void  package.json  void.json  voidpkg.toml
language/void_modules/is_number2/: NPM_IMPORT.txt  index.void  package.json  void.json  voidpkg.toml
language/void_modules/is_number2/npm/package/: package-lock.json
language/void_modules/npm_is_number/: NPM_IMPORT.txt  package.json  void.json  voidpkg.toml
language/void_modules/time/: index.void  package.json
language/vpm-imports/npm_is_odd_new/: NPM_IMPORT.txt  index.void  package.json  void.json  voidpkg.toml
package-manager/: .gitignore  (+2 more)
package-manager/registry/: Cargo.toml
package-manager/registry/src/: main.rs
package-manager/registry/templates/: auth_guest.html  auth_user.html  index.html  package_card.html  package_detail.html  upload_inspect.html  version_item.html
package-manager/vpm/: Cargo.toml
package-manager/vpm/src/: cli.rs  logging.rs  main.rs  npm.rs
(+9 files in other folders)
