[package]
name = "void"
version = "0.1.2"
edition = "2024"
description = "Void language runtime written in Rust"
license = "MIT"

[dependencies]
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
codegen-units = 1
lto = "thin"
panic = "abort"
strip = true
