[package]
name = "void-registry"
version = "0.1.0"
edition = "2024"

[dependencies]
argon2 = "0.5"
axum = { version = "0.8", features = ["form", "multipart"] }
axum-extra = { version = "0.10", features = ["cookie"] }
chrono = { version = "0.4", default-features = false, features = ["clock"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "sqlite"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal"] }
uuid = { version = "1", features = ["v4"] }
