[package]
name = "vpm"
version = "0.1.3"
edition = "2024"

[dependencies]
clap = { version = "4", features = ["derive"] }
flate2 = "1"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "multipart", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tar = "0.4"
toml = "0.8"
